fixed alignment of referral list

--- a/packages/vanilla-components/src/components/referral-component/referral-component.scss
+++ b/packages/vanilla-components/src/components/referral-component/referral-component.scss
@@ -15,6 +15,7 @@ sqh-referral-component {
     margin: 0 auto;
     padding: 0 20px;
     line-height: 1.6;
+    text-align:left;
     &>div:first-of-type {
       -ms-flex: 1;
       flex: 1;
